--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,12 @@
             <artifactId>selenium-java</artifactId>
             <version>4.31.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
 
 
         <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
